# ravelry-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/ravelry/: Cargo.toml
crates/ravelry-cli/: Cargo.toml
crates/ravelry-cli/src/: config.rs  main.rs
crates/ravelry/src/: error.rs  lib.rs  pagination.rs  request_options.rs
crates/ravelry/src/api/: bundled_items.rs  bundles.rs  favorites.rs  friends.rs  messages.rs  mod.rs  patterns.rs  projects.rs  root.rs  stash.rs  upload.rs  yarns.rs
crates/ravelry/src/auth/: basic.rs  mod.rs  oauth2.rs
crates/ravelry/src/client/: mod.rs
crates/ravelry/src/types/: bookmark.rs  bundle.rs  common.rs  friend.rs  message.rs  mod.rs  pattern.rs  photo.rs  project.rs  stash.rs  upload.rs  user.rs  yarn.rs
crates/ravelry/tests/: error_tests.rs  favorites_tests.rs  messages_tests.rs  upload_tests.rs
crates/ravelry/tests/common/: mod.rs
