[package]
name = "ravelry"
version = "0.1.0"
edition = "2021"
description = "A typed, async Rust client for the Ravelry API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/strickvl/ravelry-rs"
keywords = ["ravelry", "knitting", "crochet", "api", "async"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
